//编写proto文件
syntax = "proto3";

package grpc;
option go_package = "./gen";

message MysqlSecondReq{
  bytes param = 1;
}

message MysqlSecondRes{
  bytes data = 1;
}

service MysqlSecondService{
  rpc GetMysqlSecondData(MysqlSecondReq) returns (MysqlSecondRes){}
}

//终端执行命令
//E:\codeWork\go\test\project-grpc\api\proto> protoc --go_out=./gen --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_out=paths=source_relative data.proto